[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-inbox-openenv"
version = "0.1.0"
description = "A real-world OpenEnv customer support inbox triage environment."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Akshat Singh" }
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "openai==1.75.0",
  "PyYAML==6.0.2",
  "httpx==0.28.1",
]

[tool.setuptools]
packages = ["server", "support_inbox_env"]
